==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

- Fixed a performance regression introduced in ``2.2.0`` that caused ``SELECT``
  statements with ``ORDER BY`` and ``LIMIT`` to execute way slower than before

- Fixed support for subscript expressions on the ``values`` column of
  ``information_schema.table_partitions``